# intro-buzz-quiz

./: .env.example  .gitignore  README.md  bunfig.toml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.server.json  vite.config.ts
client/: App.tsx  action.html  assets.d.ts  console.html  gameboard.html  index.css  index.html  main-action.tsx  main-console.tsx  main-gameboard.tsx  main-home.tsx  musicKitApp.ts  musicKitStore.ts  musickit.d.ts  useMusicKit.ts  useMusicKitLibraryQueries.ts  useScreenWakeLock.ts  useSequentialPlayback.ts
client/components/: Button.tsx  CircularSecondsSlider.tsx  Eyebrow.tsx  GameboardPlayers.tsx  Glass.tsx  Glyphs.tsx  PlayerBadge.tsx  PlaylistPanel.tsx  RoundTrackDisclosure.tsx  TrackDisplay.tsx
client/lib/: gameClient.ts  mountApp.tsx  sounds.ts  styles.ts  util.ts
client/pages/: ActionPage.tsx  ConsolePage.tsx  GameboardPage.tsx  HomePage.tsx
server/: index.ts
spec/features/backend/: action_api.feature  console.feature  game_flow.feature  initial_state.feature
spec/features/frontend/: action_page.feature  apple_music.feature  console_page.feature  gameboard_page.feature
spec/features/integration/: game_session.feature
spec/step_defs/: .gitignore  conftest.py  pyproject.toml  tls_helpers.py
spec/step_defs/backend/: helpers.py  test_backend_specs.py
spec/step_defs/frontend/: conftest.py  helpers.py  musickit_mock.py  test_frontend_specs.py
src/: App.css  App.tsx  index.css  useMusicKit.ts
type/: game.ts
